# register_student_activities

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml  requeriments.txt  requirements  run.py
app/: __init__.py
app/forms/: forms.py
app/routes/: __init__.py  actividades.py  auth.py  bibliotecario.py  buscador.py  certificado.py  errors.py  estudiante.py  utils.py
app/schemas/: actividad.py  bibliotecario.py  estudiante.py
app/static/css/: bootstrap.css
app/templates/: activity.html  base.html  bibliotecario.html  error.html  estudiante.html  estudiante_form.html  index.html  login.html  new_student.html  password.html  update_bibliotecario.html  view_activities.html
app/utils/: certificado.py  events.py
docs/: conf.py  index.rst  routes.rst
