[tool.poetry]
name = "60 horas"
version = "1.0.0"
description = "Sistema de registro de las actividades realizadas por los estudiantes en la Biblioteca"
authors = ["Luis Enrique Lescano <luis575497@gmail.com>"]
license = "https://creativecommons.org/licenses/by/4.0/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Admin = "^1.6.0"
Flask-FontAwesome = "^0.1.5"
Flask-Login = "^0.6.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.1"
Flask-Avatars = "^0.2.2"
pandas = "^1.5.0"
PyMySQL = "^1.0.2"
python-docx = "^0.8.11"
email-validator = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
